--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "axios": "^1.9.0",
     "chalk": "^3.0.0",
     "dotenv": "^16.5.0",
+    "node-cron": "^3.0.3",
     "ethers": "^6.13.5"
   }
 }
